...
                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <textInputTraits key="textInputTraits" returnKeyType="search"/>
                                <connections>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="RWC-fu-Ii1"/>
                                </connections>
                            </searchBar>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logout" translatesAutoresizingMaskIntoConstraints="NO" id="rqy-cg-Mto">
                                <rect key="frame" x="314.33333333333331" y="111" width="78.666666666666686" height="33.666666666666657"/>
                            </imageView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No Internet, Check Connection" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TBe-Vg-xMf">
                                <rect key="frame" x="71.333333333333329" y="83" width="250.66666666666669" height="686"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                <color key="textColor" red="0.40000000000000002" green="0.20000000000000001" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
...
                            <constraint firstItem="Nyk-KE-iTf" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="fIP-0P-xFr"/>
                            <constraint firstItem="rqy-cg-Mto" firstAttribute="height" secondItem="Nyk-KE-iTf" secondAttribute="height" multiplier="0.6" id="mie-89-jxr"/>
                            <constraint firstItem="rqy-cg-Mto" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.2" id="qF5-Jb-S5r"/>
                            <constraint firstItem="QiW-6f-hnE" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="s9C-Cq-F4w"/>
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Home" image="house" catalog="system" id="dwY-MH-EZ8"/>
                    <navigationItem key="navigationItem" title="Home" prompt="Home" id="1PL-5K-l6f"/>
                    <connections>
                        <outlet property="logoutImageView" destination="rqy-cg-Mto" id="XaM-Jb-eUu"/>
                        <outlet property="noInternetLabel" destination="TBe-Vg-xMf" id="MZm-su-f93"/>
                        <outlet property="recipesTable" destination="QiW-6f-hnE" id="X96-BT-Clm"/>
                        <outlet property="searchBar" destination="Nyk-KE-iTf" id="lCP-Uk-nW8"/>
...
                            <constraint firstItem="c6e-LL-gyd" firstAttribute="trailing" secondItem="fpd-o7-ruj" secondAttribute="trailing" id="GQV-cv-C41"/>
                            <constraint firstItem="c6e-LL-gyd" firstAttribute="leading" secondItem="fpd-o7-ruj" secondAttribute="leading" id="LaP-NN-q5f"/>
                            <constraint firstAttribute="bottom" secondItem="c6e-LL-gyd" secondAttribute="bottom" id="Utq-89-7Ia"/>
                            <constraint firstItem="c6e-LL-gyd" firstAttribute="top" secondItem="fpd-o7-ruj" secondAttribute="top" id="rpU-3S-mQe"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Recipe Details" id="4pO-6r-cHp">
                        <barButtonItem key="rightBarButtonItem" image="heart" catalog="system" style="plain" id="5cv-em-VtO">
                            <color key="tintColor" systemColor="systemPinkColor"/>
                            <connections>
                                <action selector="addAndRemoveFavourite:" destination="NwW-VL-6Ql" id="Xeu-GY-jH8"/>
                            </connections>
                        </barButtonItem>
...
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="recipes" translatesAutoresizingMaskIntoConstraints="NO" id="tx1-ki-SdO">
                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                            </imageView>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="E-mail" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EKk-dv-Apr">
                                <rect key="frame" x="16" y="668" width="361" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <textInputTraits key="textInputTraits" keyboardType="emailAddress" returnKeyType="next"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="v8F-pa-NHQ">
                                <rect key="frame" x="16" y="718" width="361" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <textInputTraits key="textInputTraits" returnKeyType="go" secureTextEntry="YES"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yA0-5D-yvT">
                                <rect key="frame" x="16" y="768" width="361" height="50"/>
...
                                    <constraint firstAttribute="height" constant="50" id="hYN-IY-bld"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <buttonConfiguration key="configuration" style="plain" title="LogIn" cornerStyle="capsule">
                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="30"/>
                                    <directionalEdgeInsets key="contentInsets" top="0.0" leading="0.0" bottom="0.0" trailing="0.0"/>
                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </buttonConfiguration>
                                <connections>
                                    <action selector="login:" destination="4V9-2N-m7w" eventType="touchUpInside" id="dq0-Ct-zRb"/>
...
