//
//  Constants.swift
//  Recipes
//
//  Created by Alaa on 04/08/2023.
//

import Foundation

class Constants {
    static let url = "https://api.npoint.io/43427003d33f1f6b51cc"
    static let navigator = "navigator"
    static let yes = "Yes"
    static let ok = "Ok"
    static let cancel = "Cancel"
    static let homeIdentifier = "homeIdentifier"
    static let incorrectInformation = "Incorrect Information"
    static let tryAgain = "The information you entered is incorrect.\nPlease try again."
    static let email = "alaa@gmail.com"
    static let password = "alaa1234"
    static let userPassword = "password"
    static let userEmail = "email"
    static let recipeCell = "recipeCell"
    static let recipeTableViewCell = "RecipeTableViewCell"
    static let noImage = "noImage"
    static let detailsStoryboard = "details"
    static let logOut = "Logging Out"
    static let logOutQuestion = "Are you sure to logout?"
    static let deleteQuestion = "Are you sure to delete?"
    static let delete = "Removing from favourite"
    static let connection = "Internet Connection"
    static let checkConnection = "Check connection and try again"
    static let entityName = "RecipeItem"
    static let headline = "headline"
    static let name = "name"
    static let id = "id"
    static let country = "country"
    static let calories = "calories"
    static let image = "image"
    static let iDFormat = "id == %@"
    static let heart = "heart"
    static let fillHeart = "heart.fill"
    
    
}
